--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Header -->
+			<header id="header">
+				<a href="index.html" class="title">Social Changemakers</a>
+				<nav>
+					<ul>
+						<li><a href="index.html" class="active">Home</a></li>
+						<li><a href="about-us.html">About Us</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="clubs.html">Clubs</a></li>
+						<li><a href="activities.html">Activities</a></li>
+						<li><a href="contact-us.html">Contact Us</a></li>
+					</ul>
+				</nav>
+			</header>
+
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
@@ -48,7 +64,7 @@
 									<h2>Who We Are</h2>
 									<p>Social Changemakers are youth leaders from across Ontario who are working towards creating social change locally, nationally and globally. Through the Harmony Movement-Social Changemakers Program youth are trained to critically analyze the world they live and given the tools to learn how to identify current issues, create inativites,  and how to take action.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="about-us.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
