--- a/about-us.html
+++ b/about-us.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>About Us - Social Changemakers</title>
@@ -11,43 +12,100 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title"></a>
+				<a href="index.html" class="title">Social Changemakers</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about-us.html" class="active">About Us</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="resources.html">Resources</a></li>
-						<li><a href="clubs.html">Clubs</a></li>
 						<li><a href="activities.html">Activities</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
 
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Our Story</a></li>
+							<li><a href="#one">Our Team</a></li>
+							<li><a href="#two">FAQ</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 class="major">About Us</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-
-							<h2 class="minor">WHO WE ARE</h2>
-							<p>Social Changemakers are youth leaders from across Ontario who are working towards creating social change locally, nationally and globally. Through the Harmony Movement-Social Changemakers Program youth are trained to critically analyze the world they live and given the tools to learn how to identify current issues, create inativites,  and how to take action.</p>
-
-							<h2 class="minor">OUR PHILOSOPHY</h2>
-							<p>As Social Changemakers we promote equity & inclusion across the province of Ontario. We use the 3Rs of Social Change to address social problems that exist in our word.</p>
-
-							<p><i>“Equality is treating everyone the same, while equity is treating everyone different to achieve the same result.”</i></p>
+							<h1>Our Story</h1>
+							<p>We promote equity & inclusion across the province of Ontario. We use the 3Rs of Social Change to address social problems that exist in our world.</p>
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
+							</ul>
 						</div>
 					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Our Team</h2>
+									<p>Social Changemakers are youth leaders from across Ontario who are working towards creating social change locally, nationally and globally. Through the Harmony Movement-Social Changemakers Program youth are trained to critically analyze the world they live and given the tools to learn how to identify current issues, create inativites,  and how to take action.</p>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Janelle Yanishewski</h2>
+									<p>Janelle has over ten years of experience in the non-profit sector. She has supported operations in a variety of roles and has experience in communications, marketing, fundraising, project management, event planning, program development, and non-profit management. She has a B.A. in Equity Studies and Peace and Conflict Studies from the University of Toronto. </p>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Shafiq Aziz</h2>
+									<p>Shafiq is a high school teacher in the TDSB, working with students with diverse special education needs in both traditional and alternative learning settings. He has been an equity and social justice advocate with over 13 years of community organizing experience in Toronto. Shafiq has a B.A. in Equity Studies and Women and Gender Studies and a B.Ed. from the University of Toronto.</p>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>FAQs</h2>
+							<p>Frequently asked questions about what we do</p>
+
+							<h3>What Is The Social Changemakers Website?</h2>
+							<p>This website is a platform for youth to engage, interact and learn from one another.
+								 Here, you will find resources and tips that will help motivate and inspire you to fight against
+								 discrimination and social injustices happening in our world. You will also find highlights and
+								 pictures from all our Social Changemakers Conferences and up-to-date news on what the Harmony Movement
+								 Team is doing.</p>
+
+						 <h3>What are the Social Changemakers Conferences?</h2>
+						 <p>The Social Changemakers Conferences are 1-2 day events that bring together students from different regions across Ontario to focus on addressing social issues in our schools and communities in creative and innovative ways. Our Social Changemakers Conferences have taken place in communities all across Ontario such as Thunder Bay, Ottawa, Brantford, Sudbury, Toronto and many more! Check out our blog for conference highlights, pictures and video.</p>
+
+						 <h3>What is the Social Changmakers Blog and who writes it?</h2>
+ 						<p>The Social Changemakers blog is written by Harmony Movement staff and student Social Changemakers across the country. Our blog features articles about current social justice issues locally and globally, student and community led initiatives and resources for creating social change. Check it out!</p>
 
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
