--- a/activities.html
+++ b/activities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>About Us - Social Changemakers</title>
+		<title>Activities - Social Changemakers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -11,33 +11,70 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title"></a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about-us.html">About Us</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="resources.html">Resources</a></li>
-						<li><a href="clubs.html">Clubs</a></li>
 						<li><a href="activities.html" class="active">Activities</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Sidebar -->
+				<section id="sidebar">
+					<div class="inner">
+						<nav>
+							<ul>
+								<li><a href="#one">Social Changemakers Clubs</a></li>
+								<li><a href="#two">Quizzes and Surveys</a></li>
+								<li><a href="#three">Action Planning Webinar</a></li>
+								<li><a href="#four">Social Changemekrs Conference</a></li>
+							</ul>
+						</nav>
+					</div>
+				</section>
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">Activities</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+			<!-- Wrapper -->
+				<div id="wrapper">
+
+					<!-- One -->
+						<section id="one" class="wrapper style1 fade-up">
+							<div class="inner">
+								<div class="content">
+									<div class="inner">
+										<h2>Social Changemakers Clubs</h2>
+										<p>Placeholder</p>
+								</div>
+							</div>
 						</div>
 					</section>
 
-			</div>
+					<!-- Two -->
+					<section id="two" class="wrapper style2 fade-up">
+						<div class="inner">
+							<h2>Quizzes and Surveys</h2>
+							<p>Placeholder</p>
+						</div>
+					</section>
 
+					<!-- Three -->
+					<section id="three" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Action Planning Webinar</h2>
+							<p>Placeholder</p>
+						</div>
+					</section>
+
+					<!-- Four -->
+					<section id="four" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Social Changemekrs Conference</h2>
+							<p>Placeholder</p>
+						</div>
+					</section>
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
