--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>About Us - Social Changemakers</title>
+		<title>Blog - Social Changemakers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -11,14 +11,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title"></a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about-us.html">About Us</a></li>
 						<li><a href="blog.html" class="active">Blog</a></li>
 						<li><a href="resources.html">Resources</a></li>
-						<li><a href="clubs.html">Clubs</a></li>
 						<li><a href="activities.html">Activities</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
