--- a/activities.html
+++ b/activities.html
@@ -71,8 +71,9 @@
 					<!-- Four -->
 					<section id="four" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Social Changemekrs Conference</h2>
-							<p>Placeholder</p>
+							<h2>Social Changemakers Conference</h2>
+							<p>Delivered completely online, this immersive conference series will bring together young leaders from across Canada from a range of backgrounds, faiths, abilities, genders, sexual orientations, including Indigenous and Francophone youth.</p>
+							<a href="conference.html" class="button">Learn more</a>
 						</div>
 					</section>
 		<!-- Footer -->
