--- a/generic.html
+++ b/generic.html
@@ -17,6 +17,9 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html" class="active">Generic</a></li>
 						<li><a href="elements.html">Elements</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="generic.html" class="active">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 			</header>
