--- a/conference.html
+++ b/conference.html
@@ -76,7 +76,7 @@
 
               <h3>Student Teams</h3>
               <p>Student Teams are composed of five youth (ages 14-18) from each province and territory, in addition to one adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. These youth will engage in the SCC for multiple weeks in January 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.</p>
-              <p><a href="" class="button">Apply As Student Team</a></p>
+              <p>Applications will open for Student Teams in November 2021.</p>
 
               <p>Once accepted, student teams will be required to pay a $25 participation fee. </p>
             </div>
