--- a/contact-us.html
+++ b/contact-us.html
@@ -44,7 +44,7 @@
 
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="mailto:info@harmony.ca" enctype=”multipart/form-data” name-"EmailForm">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
