--- a/index.html
+++ b/index.html
@@ -150,21 +150,9 @@
 							<h2>Get Updates</h2>
 							Join our newsletter mailing list today!
 							<br><br>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-								</div>
 								<ul class="actions">
-									<li><a href="" class="button submit">Subscribe</a></li>
+									<li><a href="http://eepurl.com/hGPqy9" class="button submit">Subscribe</a></li>
 								</ul>
-							</form>
 						</div>
 					</section>
 
