--- a/conference.html
+++ b/conference.html
@@ -71,15 +71,19 @@
               <h2>Who Should Apply?</h2>
               <p> There are two streams to the Social Changemakers Leadership Series. </p>
               <h3>Emerging Leaders</h3>
-              <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  A small honorarium of $100 will be paid to each Emerging Leader for their participation.</p>
+              <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  A small honorarium of $500 will be paid to each Emerging Leader for their participation.</p>
+
+							<p>The deadline to apply is December 6, 2021.</p>
+
               <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9I2ioZfqNItxqpBMhmTm7IpM0Ql4tZOAAhG4M3X5-W4kBHQ/viewform?embedded=true" class="button">Apply As Emerging Leader</a></p>
 
 
               <h3>Student Teams</h3>
               <p>Student Teams are composed of five youth (ages 14-18) from each province and territory, in addition to one adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. These youth will engage in the SCC for multiple weeks in January 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.</p>
-              <p>Applications will open for Student Teams in November 2021.</p>
 
-              <p>Once accepted, student teams will be required to pay a $25 participation fee. </p>
+              <p>The deadline to apply is January 31, 2022. Once accepted, student teams will be required to pay a $25 participation fee. </p>
+
+							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
 
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
