--- a/conference-fr.html
+++ b/conference-fr.html
@@ -43,7 +43,7 @@
 						<div class="inner">
 							<h1 class="major">Social Changemakers Conference Series</h1>
 							<video width="100%" height="800" autoplay muted controls>
-							  <source src="images/scm_promo.mp4" type="video/mp4">
+							  <source src="images/scm_promo_fr.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 							</video>
 							<br>
