--- a/conference.html
+++ b/conference.html
@@ -79,7 +79,8 @@
 
 
               <h3>Student Teams</h3>
-              <p>Student Teams are composed of five youth (ages 14-18) from each province and territory, in addition to one adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. These youth will engage in the SCC for multiple weeks in January 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.</p>
+              <p>Student Teams are composed of five youth (ages 14-18) from each province and territory, in addition to one adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. The conference will take place virtually from March 4-6, 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.
+								<a href="https://drive.google.com/file/d/1ankCFTWZ1dW8qbm40TYnKJbE3ehFmu4a/view?usp=sharing">See the full schedule.</a></p>
 
               <p>The deadline to apply is January 31, 2022. Once accepted, student teams will be required to pay a $25 participation fee. </p>
 
