--- a/conference-fr.html
+++ b/conference-fr.html
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Social Changemakers Conference Series</h1>
+							<h1 class="major">La Série de Conférences Social Changemakers</h1>
 							<video width="100%" height="800" autoplay muted controls>
 							  <source src="images/scm_promo_fr.mp4" type="video/mp4">
 							Your browser does not support the video tag.
