--- a/clubs.html
+++ b/clubs.html
@@ -42,6 +42,10 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Clubs</h1>
+							<video width="100%" autoplay muted controls>
+							  <source src="images/sc_network_promo.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+							</video>
 							<h2>What is the Social Changemakers Network? </h2>
 							<p>The Social Changemakers Network (SCN) is a community of school and community clubs that are working to create more inclusive schools and communities by addressing issues of discrimination and inequity.</p>
 
