--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/SCM-logo.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41573105-3"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-41573105-3');
+		</script>
 	</head>
 	<body class="is-preload">
 
