Updated deadline for student teams
Added individual application option on English page.

--- a/conference.html
+++ b/conference.html
@@ -55,11 +55,11 @@
               <h2>What Will The Social Changemakers Conference Series Look Like? </h2>
               <p> The Social Changemakers Conference Series will be delivered completely online to avoid any financial, geographic, medical, or accessibility barriers that participants may face. The Emerging Leaders (ages 18-24) will design the contents of the conference, but the general topics include how to progress diversity, equity, and inclusion in communities.  The Youth Conference portion will bring together student teams (aged 14-18) to learn how to identify issues and take actions to create positive change in their schools and communities.</p>
 
-              <p>Some potential workshops include:
-              <li>How to become an accessibility champion</li>
-              <li>LGBTQ2S+ allyship</li>
-              <li>Promoting systemic change to improve mental health</li>
-              <li>Islamophobia and human rights</li></p>
+              <p>During this conference we'll discus:
+              <li>The difference between social change and charity</li>
+              <li>Using your story to create social change</li>
+              <li>Challenging our own bias</li>
+              <li>Learning how to connect with people with different perspectives</li></p>
 
               <p>Potential In-Person or Virtual Tours Include:
               <li>Canada Human Rights Museum</li>
@@ -68,21 +68,29 @@
               <li>Canadian Lesbian and Gay Archives</li>
               <li>Pier 21 Museum</li></p>
 
+							<a href="https://drive.google.com/file/d/1ankCFTWZ1dW8qbm40TYnKJbE3ehFmu4a/view?usp=sharing">See the full schedule.</a></p>
+
               <h2>Who Should Apply?</h2>
-              <p> There are two streams to the Social Changemakers Leadership Series. </p>
-              <h3>Emerging Leaders</h3>
+              <p> There are three streams to the Social Changemakers Leadership Series. </p>
+
+              <h3>Student Teams</h3>
+              <p>Student Teams are composed of up to ten youth (ages 14-19) from each province and territory, with an optional adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. The conference will take place virtually from March 4-6, 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.
+								
+              <p>The deadline to apply is February 11, 2022. Once accepted, student teams will be required to pay a $25 participation fee. The fee can be waived if it is a barrier to participation. </p>
+
+							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
+
+							<h3>Individual Youth</h3>
+							<p>Join us and get connected with other youth in high school (ages 14-19) from each province and territory. There is no cost to register to attend.
+
+							<p>The deadline to apply is February 11, 2022.</p>
+
+							<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
+
+							<h3>Emerging Leaders</h3>
               <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  A small honorarium of $150 will be paid to each Emerging Leader for their participation.</p>
 
               <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9I2ioZfqNItxqpBMhmTm7IpM0Ql4tZOAAhG4M3X5-W4kBHQ/viewform?embedded=true" class="button">Apply As Emerging Leader</a></p>
-
-
-              <h3>Student Teams</h3>
-              <p>Student Teams are composed of five youth (ages 14-18) from each province and territory, in addition to one adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. The conference will take place virtually from March 4-6, 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.
-								<a href="https://drive.google.com/file/d/1ankCFTWZ1dW8qbm40TYnKJbE3ehFmu4a/view?usp=sharing">See the full schedule.</a></p>
-
-              <p>The deadline to apply is January 31, 2022. Once accepted, student teams will be required to pay a $25 participation fee. </p>
-
-							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
 
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
