--- a/conference.html
+++ b/conference.html
@@ -68,16 +68,15 @@
               <li>The difference between social change and charity</li>
               <li>Using your story to create social change</li>
               <li>Challenging our own bias</li>
-              <li>Learning how to connect with people with different perspectives</li></p>
+              <li>Learning how to have courageous conversations</li></p>
 
-              <p>Potential In-Person or Virtual Tours Include:
-              <li>Canada Human Rights Museum</li>
-              <li>Woodland Cultural Centre</li>
-              <li>Deaf Culture Centre</li>
-              <li>Canadian Lesbian and Gay Archives</li>
-              <li>Pier 21 Museum</li></p>
+               <p>Speakers, Virtual Tours & Workshops Include:
+              <li>Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">"=Moose Hide Campaign</a></li>
+							<li>Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">" Reid My Mind</a></li>
+              <li>ASL Workshop</li>
+              <li>Woodland Cultural Centre...and more</li>
 
-							<a href="https://drive.google.com/file/d/1ankCFTWZ1dW8qbm40TYnKJbE3ehFmu4a/view?usp=sharing">See the full schedule.</a></p>
+							<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See the full schedule.</a></p>
 
               <h2>Who Should Apply?</h2>
               <p> There are three streams to the Social Changemakers Leadership Series. </p>
@@ -85,7 +84,7 @@
               <h3>Student Teams</h3>
               <p>Student Teams are composed of up to ten youth (ages 14-19) from each province and territory, with an optional adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. The conference will take place virtually from March 4-5, 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.
 
-              <p>The deadline to apply is February 22, 2022. Once accepted, student teams will be required to pay a $25 participation fee. The fee can be waived if it is a barrier to participation. </p>
+              <p>The deadline to apply is March 1, 2022. Once accepted, student teams will be required to pay a $25 participation fee. The fee can be waived if it is a barrier to participation. </p>
 
 							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
 
@@ -97,9 +96,9 @@
 							<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
 
 							<h3>Emerging Leaders</h3>
-              <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  A small honorarium of $150 will be paid to each Emerging Leader for their participation.</p>
+              <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  An honorarium of $150 will be paid to each Emerging Leader for their participation.</p>
 
-              <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9I2ioZfqNItxqpBMhmTm7IpM0Ql4tZOAAhG4M3X5-W4kBHQ/viewform?embedded=true" class="button">Apply As Emerging Leader</a></p>
+              <p>APPLICATIONS NOW CLOSED.</a></p>
 
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
