--- a/conference.html
+++ b/conference.html
@@ -74,7 +74,7 @@
               <li>Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">"=Moose Hide Campaign</a></li>
 							<li>Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">" Reid My Mind</a></li>
               <li>ASL Workshop</li>
-              <li>Woodland Cultural Centre...and more</li>
+              <li>Woodland Cultural Centre...and more</li></p>
 
 							<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See the full schedule.</a></p>
 
