Updated conference and frnech
Deleted Emerging Leaders, added dates and apply at top and fixed speaker info

--- a/conference.html
+++ b/conference.html
@@ -55,9 +55,16 @@
 							</div>
 							<h1 class="major">Social Changemakers Conference Series</h1>
 							<video width="100%" autoplay muted controls>
-							  <source src="images/scm_promo.mp4" type="video/mp4">
+							  <source src="images/scm_promo2.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 							</video>
+							<h2>Social Changemakers Leadership Series</h2>
+							<h3>March 4, 6:00-8:00pm EST / 3:00-5:00pm PST</h3>
+							<h3>March 5, 1:00-3:45pm EST / 10:00am-1:45pm PST</h3>
+							<br>
+<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
+
               <h2>What is the Social Changemakers Leadership Series? </h2>
 							<p>Delivered completely online, this immersive conference series will bring together young leaders from across Canada from a range of backgrounds, faiths, abilities, genders, sexual orientations, including Indigenous and Francophone youth. The leaders will network, build understanding, and create connections with each other. They will examine the current state of diversity and inclusion and identify issues they want to address in their local communities. The program will include speakers, workshops, virtual field trips, and individual and group reflections!</p>
 
@@ -71,8 +78,8 @@
               <li>Learning how to have courageous conversations</li></p>
 
                <p>Speakers, Virtual Tours & Workshops Include:
-              <li>Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">"=Moose Hide Campaign</a></li>
-							<li>Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">" Reid My Mind</a></li>
+              <li>Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">Moose Hide Campaign</a></li>
+							<li>Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">Reid My Mind</a></li>
               <li>ASL Workshop</li>
               <li>Woodland Cultural Centre...and more</li></p>
 
@@ -91,14 +98,9 @@
 							<h3>Individual Youth</h3>
 							<p>Join us and get connected with other youth in high school (ages 14-19) from each province and territory. There is no cost to register to attend.
 
-							<p>The deadline to apply is February 22, 2022.</p>
+							<p>The deadline to apply is March 1, 2022.</p>
 
 							<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
-
-							<h3>Emerging Leaders</h3>
-              <p>The SCC will bring together 26 Emerging Leaders (ages 18-24), two from each territory and province, who have demonstrated commitment to advancing equity and inclusion within their communities. These leaders will collaborate to plan and facilitate a virtual conference series for high school youth. Emerging Leaders will meet biweekly to prepare for the SCC from October 2021 to January 2022. Emerging Leaders will facilitate their conference series to Student Teams and Youth over a multiple-week period in January 2022, under the mentorship and guidance of the Harmony Movement staff.  An honorarium of $150 will be paid to each Emerging Leader for their participation.</p>
-
-              <p>APPLICATIONS NOW CLOSED.</a></p>
 
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
