Updating conference website with schedule test

--- a/conference.html
+++ b/conference.html
@@ -21,7 +21,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<nav>
+	-			<nav>
 					<ul class="icons">
 						<li><a href="" class="image"><img src="images/SCM-white.png" alt="" data-position="center center" /></a></li>
 						<li><h3>SOCIAL CHANGEMAKERS</h3></li>
@@ -58,18 +58,33 @@
 							  <source src="images/scm_promo2.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 							</video>
-							<h2>Social Changemakers Leadership Series</h2>
-							<h3>March 4, 6:00-8:00pm EST / 3:00-5:00pm PST</h3>
-							<h3>March 5, 1:00-3:45pm EST / 10:00am-1:45pm PST</h3>
-							<br>
+
 <p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
 
-              <h2>What is the Social Changemakers Leadership Series? </h2>
-							<p>Delivered completely online, this immersive conference series will bring together young leaders from across Canada from a range of backgrounds, faiths, abilities, genders, sexual orientations, including Indigenous and Francophone youth. The leaders will network, build understanding, and create connections with each other. They will examine the current state of diversity and inclusion and identify issues they want to address in their local communities. The program will include speakers, workshops, virtual field trips, and individual and group reflections!</p>
+              <h2>Welcome Social Changemakers! </h2>
+							<p>We are so excited to come together March 4-5, 2022. If you have any questions or issues accessing the sessions email info@oneia.ca or text 416-669-2051. The event will be held on zoom. Links for the sessions will be emailed to attendees 24 hours in advance. ASL and live transcription in English and French will be provided.</p>
 
-              <h2>What Will The Social Changemakers Conference Series Look Like? </h2>
+							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
+							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details below to set this up.</p>
+-
+              <h2>Social Changemakers Conference Schedule </h2>
               <p> The Social Changemakers Conference Series will be delivered completely online to avoid any financial, geographic, medical, or accessibility barriers that participants may face. The Emerging Leaders (ages 18-24) will design the contents of the conference, but the general topics include how to progress diversity, equity, and inclusion in communities.  The Youth Conference portion will bring together student teams (aged 14-18) to learn how to identify issues and take actions to create positive change in their schools and communities.</p>
+
+<table>
+	<tr>
+		<th>Time</th>
+		<th>Activity</th>
+	</tr>
+	<tr>
+		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Welcome and Kick-off with Guest Speaker Thomas Reid</td>
+	</tr>
+	<tr>
+		<td>4:00 PST<br>7:00 EST<br> 8:00 AST <br> 8:30 NST</td>
+	</tr>
+</table>
+
 
               <p>During this conference we'll discus:
               <li>The difference between social change and charity</li>
@@ -83,24 +98,11 @@
               <li>ASL Workshop</li>
               <li>Woodland Cultural Centre...and more</li></p>
 
-							<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See the full schedule.</a></p>
+							<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See a pdf version of the schedule.</a></p>
 
-              <h2>Who Should Apply?</h2>
-              <p> There are three streams to the Social Changemakers Leadership Series. </p>
-
-              <h3>Student Teams</h3>
-              <p>Student Teams are composed of up to ten youth (ages 14-19) from each province and territory, with an optional adult monitor/supervisor for each group. Student Teams will attend the SCC to expand their understanding of Canada’s history, their own identity, and take action to improve their communities. The conference will take place virtually from March 4-5, 2022, facilitated by the Emerging Leaders team under the mentorship and guidance of the Harmony Movement Staff.
-
-              <p>The deadline to apply is March 1, 2022. Once accepted, student teams will be required to pay a $25 participation fee. The fee can be waived if it is a barrier to participation. </p>
-
-							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
-
-							<h3>Individual Youth</h3>
-							<p>Join us and get connected with other youth in high school (ages 14-19) from each province and territory. There is no cost to register to attend.
-
-							<p>The deadline to apply is March 1, 2022.</p>
-
-							<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
+							<h4>Setting up captions in gather.town.</h4>
+							<p>The latest Chrome update now natively supports live captioning of audio streams, which WebRTC connects to automatically, so you can have live captioning for other people's audio in Gather! In the top right of your Chrome navigation menu, click the three lines next to the musical note. A pop-up window shows the name of the site. At the bottom of the pop-up, a toggle switch can be turned on to enable Live Captioning (in English only).</p>
+							<a href="" class="image"><img src="livecaptions_gather_town.png" alt=Screen Capture of Gather.town></a>
 
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
