Final draft conference edits

--- a/conference.html
+++ b/conference.html
@@ -66,44 +66,112 @@
 							<p>We are so excited to come together March 4-5, 2022. If you have any questions or issues accessing the sessions email info@oneia.ca or text 416-669-2051. The event will be held on zoom. Links for the sessions will be emailed to attendees 24 hours in advance. ASL and live transcription in English and French will be provided.</p>
 
 							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
-							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details below to set this up.</p>
+							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details at the bottom of this page for to set this up.</p>
 -
               <h2>Social Changemakers Conference Schedule </h2>
               <p> The Social Changemakers Conference Series will be delivered completely online to avoid any financial, geographic, medical, or accessibility barriers that participants may face. The Emerging Leaders (ages 18-24) will design the contents of the conference, but the general topics include how to progress diversity, equity, and inclusion in communities.  The Youth Conference portion will bring together student teams (aged 14-18) to learn how to identify issues and take actions to create positive change in their schools and communities.</p>
 
+<h4>Friday, March 4</h4>
 <table>
 	<tr>
 		<th>Time</th>
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
-		<td>Welcome and Kick-off with Guest Speaker Thomas Reid</td>
+		<td>Fri, Mar 4<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">Reid My Mind<br>
+		<li>How to go beyond fundraising and make impactful change</li></td>
 	</tr>
 	<tr>
 		<td>4:00 PST<br>7:00 EST<br> 8:00 AST <br> 8:30 NST</td>
+		<td>Small Group Breakouts - change zoom rooms<br>
+			<li>Challenging your own bias</li></td>
+	</tr>
+	<tr>
+		<td>5:00 PST<br>8:00 EST<br>9:00 AST<br>9:30 NST</td>
+		<td>Optional: Networking and Games on gather.town</td>
 	</tr>
 </table>
 
+<h4>Saturday, March 5</h4>
+<table>
+	<tr>
+		<th>Time</th>
+		<th>Activity</th>
+	</tr>
+	<tr>
+		<td>Sat, Mar 5<br>8:30 PST <br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
+		<td>Optional: ASL Basics Workshop (one hour session)</td>
+	</tr>
+	<tr>
+		<td>9:00 PST <br>12:00 EST <br>1:00 AST<br>1:30 NST</td>
+		<td>Optional: Netwrking and games on gather.town</td>
+	</tr>
+	<tr>
+		<td>10:00 PST<br>1:00 EST<br>2:00 AST <br>2:30 NST</td>
+		<td>Introduction for the Day and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">Moose Hide Campaign</a><br>
+		<li>How to go beyond allyship to solidarity</li></td>
+	</tr>
+	<tr>
+	<td>10:40 PST<br>1:40 EST<br>2:40 AST <br>1:10 NST</td>
+	<td>Small Group Breakouts - same zoom link as previous day
+		<li>How to use your story to make social change</li>
+				<li>How to have courageous conversations</li></td>
+</tr>
+<tr>
+	<td>12:00 PST<br>3:00 EST<br>4:00 AST <br>4:30 NST</td>
+	<td>Break - Yoga and meditation in main room</td>
+</tr>
+<tr>
+	<td>12:15 PST<br>3:15 EST<br>4:15 AST <br>4:45 NST</td>
+	<td>Conference Closing, Special Performance & Prizes</td>
+</tr>
+<tr>
+	<td>12:45 PST<br>3:45 EST<br>4:45 AST <br>5:15 NST</td>
+	<td>Optional networking and games on gather.town - room will stay open for one hour</td>
+</tr>
+</table>
 
-              <p>During this conference we'll discus:
-              <li>The difference between social change and charity</li>
-              <li>Using your story to create social change</li>
-              <li>Challenging our own bias</li>
-              <li>Learning how to have courageous conversations</li></p>
+<h4>Sunday, March 6</h4>
+<table>
+	<tr>
+		<th>Time</th>
+		<th>Activity</th>
+	</tr>
+	<tr>
+		<td>Sun. Mar. 6<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Optional:<a href="https://woodlandculturalcentre.ca/mohawk-institute-residential-school-virtual-tour-now-available-online/"> Virtual Tour of the Mohawk Residential School</a><br><em>Please note content in this workshop may be triggering for some participants.</em></td>
+	</tr>
+</table>
 
-               <p>Speakers, Virtual Tours & Workshops Include:
-              <li>Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">Moose Hide Campaign</a></li>
-							<li>Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">Reid My Mind</a></li>
-              <li>ASL Workshop</li>
-              <li>Woodland Cultural Centre...and more</li></p>
+<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See a pdf version of the schedule.</a></p>
+<p>Note that there will be another optional virtual workshop on 2SLGBTQ+ youth and poverty held at a future date in March. Details will be emailed once available.</p>
 
-							<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See a pdf version of the schedule.</a></p>
+<h3>Follow-up</h3>
+<p>After the conference we will send weekly emails taking the youth and student teams through the 3Rs of Social Change. Each week you will receive an email with icebreakers, a video to watch and additional resources to support you in planning and delivering an initiative addressing an issue you see in your school or community.</p>
+<p>We'll be hosting a follow-up session and celebration to discuss this very important work, any progress, challenges and next steps at the March 25th event.</p>
 
-							<h4>Setting up captions in gather.town.</h4>
+<h4>Friday, March 25</h4>
+<table>
+	<tr>
+		<th>Time</th>
+		<th>Activity</th>
+	</tr>
+	<tr>
+		<td>Fri, Mar 25<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Celebration & Wrap-Up with Special Performance<br>
+			<li>Next steps: How to keep pushing without burning out</li></td>
+	</tr>
+</table>
+
+							<h3>Setting up captions in gather.town.</h3>
 							<p>The latest Chrome update now natively supports live captioning of audio streams, which WebRTC connects to automatically, so you can have live captioning for other people's audio in Gather! In the top right of your Chrome navigation menu, click the three lines next to the musical note. A pop-up window shows the name of the site. At the bottom of the pop-up, a toggle switch can be turned on to enable Live Captioning (in English only).</p>
-							<a href="" class="image"><img src="livecaptions_gather_town.png" alt=Screen Capture of Gather.town></a>
+							<a href="" class="image"><img src="images/livecaptions_gather_town.png" alt=Screen Capture of Gather.town></a>
 
+<h3>For more information</h3>
+<p>Email info@harmony.ca, call or text 416-669-2051.</p>
+
+<h3>Thanks to our Event Supporters:</h3>
 							<a href="" class="image"><img src="images/gov.png" alt="" data-position="center center" width="100%"/></a>
             </div>
 					</section>
